tests/blackbox_tests/desktop-entry-syntax-error-2.desktop
# E: syntax-error-in-desktop-entry duplicate group 'Desktop Entry' line 6

[Desktop Entry]
Type = Application

[Desktop Entry]
Name = Gizmo Enhancer
